Fixed overflow issue on left navbar

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,7 +5,7 @@ html, body {font-family: Georgia, serif; width: 100%; height: 100%; min-height: 
 body {
   background-color: rgb(247, 247, 245);
   color: rgb(0, 4, 20);
-  
+
   margin:0;
 }
 
@@ -77,7 +77,7 @@ blockquote {
   padding-right: 15px;
   width: 100%;
   border: none;
-  border-width: 2px; 
+  border-width: 2px;
   border-right-style: solid;
   border-color: rgba(200, 200, 200, 0.5);
   text-align: right;
@@ -89,7 +89,7 @@ blockquote {
 .top-level {
   padding: 15px;
   border: none;
-  border-width: 4px; 
+  border-width: 4px;
   border-right-style: solid;
   border-color: rgba(200, 200, 200, 0.5);
 
@@ -101,7 +101,7 @@ blockquote {
   padding: 10px;
   padding-right: 15px;
   border: none;
-  border-width: 3px; 
+  border-width: 3px;
   border-right-style: solid;
   border-color: rgba(200, 200, 200, 0.5);
 
@@ -142,7 +142,7 @@ blockquote {
   padding: 0px;
   background-color: white;
   max-height: 0;
-  overflow: scroll;
+  overflow: hidden;
   transition: max-height 0.2s ease-out;
 }
 
@@ -153,7 +153,7 @@ blockquote {
 	list-style-type: none;
 	background-color: rgb(240, 240, 240);
 
-	border-width: 1px; 
+	border-width: 1px;
   	border-right-style: solid;
   	border-color: rgba(200, 200, 200, 0.5);
 }
@@ -164,7 +164,7 @@ blockquote {
 
     text-align: left;
 
-    border-width: 1px; 
+    border-width: 1px;
   	border-bottom-style: solid;
   	border-color: rgba(220, 220, 220, 0.25);
 }
@@ -276,7 +276,7 @@ nav a:hover {
 
   		text-align: left;
   		padding-left: 15px;
-  		border-right-style: none; 
+  		border-right-style: none;
   		border-left-style: solid;
 		border-color: rgba(200, 200, 200, 0.5);
   	}
